@@ -1,3 +1,8 @@
+2010-06-03  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Added
+	  some insertion cursor tests.
+
 2010-06-02  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor.Tests/ViTests.cs: Added visual line
